@@ -1,48 +1,80 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>net.tenie</groupId>
 	<artifactId>SQLucky</artifactId>
-	<version>0.0.1</version>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+
+	<name>sqlucky</name>
+
 	<properties>
-		<junit.version>4.11</junit.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.release>11</maven.compiler.release>
+		<javafx.version>16</javafx.version>
 	</properties>
+
+	<organization>
+		<name>https://github.com/tenie/SQLucky</name>
+	</organization>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+
+		<!-- 控件库 -->
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>9.0.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.fxmisc.richtext</groupId>
+			<artifactId>richtextfx</artifactId>
+			<version>0.10.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>11.1.0</version>
+		</dependency>
 
 		<!-- sql 格式化 -->
 		<dependency>
 			<groupId>com.github.vertical-blank</groupId>
 			<artifactId>sql-formatter</artifactId>
 			<version>2.0.0</version>
-		</dependency> 
+		</dependency>
 
-		 
-		
-		<!-- 控件库 -->
-		<dependency><!--  按钮 -->
-			<groupId>com.jfoenix</groupId>
-			<artifactId>jfoenix</artifactId>
-			<version>8.0.8</version>
-		</dependency>
-		<dependency><!-- 表格  -->
-			<groupId>org.controlsfx</groupId> 
-			<artifactId>controlsfx</artifactId>
-			<version>8.40.17</version>
-		</dependency>
-		<dependency><!-- 文本编辑器 -->
-			<groupId>org.fxmisc.richtext</groupId> 
-			<artifactId>richtextfx</artifactId>
-			<version>0.10.6</version>
-		</dependency>
-		
 		<!-- io 操作文件 -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
-		</dependency> 
-		  
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 
 		<!-- 数据库 JDBC -->
 		<dependency>
@@ -55,158 +87,100 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.35</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.197</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.xerial</groupId>
-		    <artifactId>sqlite-jdbc</artifactId>
-		    <version>3.34.0</version>
 		</dependency> 
- 
 		
-		 
-		 <!-- log -->
+		
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.14.1</version>
-		</dependency> 
-		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-api</artifactId>
-		    <version>2.14.1</version>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.34.0</version>
 		</dependency>
-		 
+
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-slf4j-impl</artifactId>
-		    <version>2.14.1</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.14.0</version>
 		</dependency>
-		 
 
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.14.0</version>
+		</dependency>
 
-
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.14.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.zenjava</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>8.8.3</version>
-				<configuration>
-					<vendor>net.tenie</vendor>
-					<!-- 运行文件名 -->
-					<appName>SQLucky</appName>
-
-					<bundleArguments>
-						<icon>${project.basedir}/src/main/resources/image/SQL61.ico</icon>
-					</bundleArguments>
-					<!-- 菜单 -->
-					<needMenu>true</needMenu>
-					<!-- 桌面图标 -->
-					<needShortcut>true</needShortcut>
-					<mainClass>net.tenie.fx.main.MainMyDB</mainClass>
-				</configuration>
-			</plugin>
-
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>${maven.compiler.release}</release>
+
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>javafx.graphics/com.sun.javafx.application=SQLucky</arg>
+						<arg>--add-exports</arg>
+						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser=SQLucky</arg>
+						<arg>--add-exports</arg>
+						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser.aggregate=SQLucky</arg>
+						<arg>--add-exports</arg>
+						<arg>org.controlsfx.controls/impl.org.controlsfx.i18n=SQLucky</arg>
+					</compilerArgs>
+
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.5</version>
 				<configuration>
-					<skipTests>true</skipTests>
+					<release>${maven.compiler.release}</release>
+					<jlinkImageName>SQLucky</jlinkImageName>
+					<launcher>launcher</launcher>
+					<mainClass>SQLucky/net.tenie.fx.main.MainMyDB</mainClass>
+					<options>
+						<option>--add-modules=javafx.controls,javafx.fxml</option>
+						<option>--add-opens</option>
+						<option>javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
+						<option>--add-opens</option>
+						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.application=SQLucky</option>
+						<option>--add-opens</option>
+						<option>java.base/java.lang=com.jfoenix</option>
+						<option>--add-opens</option>
+						<option>java.base/java.lang.reflect=com.jfoenix</option>
+						<option>--add-opens</option>
+						<option>java.base/java.lang=ALL-UNNAMED</option>
+						<option>--add-opens</option>
+						<option>javafx.controls/javafx.scene.control=SQLucky</option>
+					</options>
 				</configuration>
 			</plugin>
-
-
-			<!-- 指定要执行的函数 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<filters>
-								<filter>
-									<artifact>*:*</artifact>
-									<excludes>
-										<exclude>META-INF/*.SF</exclude>
-										<exclude>META-INF/*.DSA</exclude>
-										<exclude>META-INF/*.RSA</exclude>
-									</excludes>
-								</filter>
-							</filters>
-
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.tenie.fx.main.MainMyDB</mainClass>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- 安装依赖 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>db2</id>
-						<phase>clean</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>com.ibm.db2.jcc</groupId>
-							<artifactId>db2jcc4</artifactId>
-							<version>10.1</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/lib/db2jcc4-10.1.jar</file>
-							<createChecksum>true</createChecksum>
-							<generatePom>true</generatePom>
-						</configuration>
-					</execution>
-					<execution>
-						<id>mysql</id>
-						<phase>clean</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>mysql</groupId>
-							<artifactId>mysql-connector-java</artifactId>
-							<version>5.1.35</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/lib/mysql-connector-java-5.1.35.jar</file>
-							<createChecksum>true</createChecksum>
-							<generatePom>true</generatePom>
-						</configuration>
-			
-					</execution>
-				</executions>
-			</plugin>
-
 		</plugins>
 	</build>
+
 </project>
